# ctu_crs

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml  static_code_analysis_and_tests.yml
src/ctu_crs/: crs_robot.py  params_crs97.yaml
