[project]
name = "ctu_crs"
version = "1.0.3"
description = "Package to control CTU/CIIRC robots CRS93 and CRS97 via MARS control unit."
authors = [
    {name = "Vladimir Petrik", email = "vladimir.petrik@cvut.cz"},
]
dependencies = [
    "ctu-mars-control-unit>=0.1.3",
    "numpy>=2.1.2",
    "pyyaml>=6.0.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "BSD 3-Clause"}


[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
